--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -22,27 +22,27 @@
     </div>
     <div class="coin">
         <img src="../img/icon/moneda.png" alt="Coin" class="coin-icon">
-        <span id="coin-count">10050</span>
-      </div>
-      
-    <!-- Boton circulo con moneda -->
-        <div class="games-container">
-            <div class="game-option">
-                <img src="../img/2.jpeg" alt="Juego 1" class="game-image">
-                <a href="../juegos/rompecabeza/index.html" class="play-button">Rompecabezas</a>
-                <p class="game-description">Arma el enigma.</p>
-            </div>
-            <div class="game-option2">
-                <img src="../img/3.jpeg" alt="Juego 2" class="game-image">
-                <a href="../juegos/quiz/index.html" class="play-button2">Wordle</a>
-                <p class="game-description">Encuentra palabras.</p>
-            </div>
-            <div class="game-option3">
-                <img src="../img/4.jpeg" alt="Multijugador" class="game-image">
-                <a href="../multijugador/index.html" class="play-button">Multijugador</a>
-                <p class="game-description">Salas.</p>
-            </div>
+        <span id="coin-count"></span> 
+       
+    </div>
+
+    <div class="games-container">
+        <div class="game-option">
+            <img src="../img/2.jpeg" alt="Juego 1" class="game-image">
+            <a href="../juegos/rompecabeza/index.html" class="play-button">Rompecabezas</a>
+            <p class="game-description">Arma el enigma.</p>
         </div>
+        <div class="game-option2">
+            <img src="../img/3.jpeg" alt="Juego 2" class="game-image">
+            <a href="../juegos/quiz/index.html" class="play-button2">Wordle</a>
+            <p class="game-description">Encuentra palabras.</p>
+        </div>
+        <div class="game-option3">
+            <img src="../img/4.jpeg" alt="Multijugador" class="game-image">
+            <a href="../multijugador/index.html" class="play-button">Multijugador</a>
+            <p class="game-description">Salas.</p>
+        </div>
+    </div>
   
     <nav class="navbar navbar-expand navbar">
         <div class="container">
@@ -93,7 +93,7 @@
                         <tr>
                             <td>
                                 <div class="player-info">
-                                    <img src="../img/pruebax.png" alt="Avatar 1" class="avatar">
+                                    <img src="../img/nose1.png" alt="Avatar 1" class="avatar">
                                     <span>Jugador 1</span>
                                 </div>
                             </td>
@@ -102,7 +102,7 @@
                         <tr>
                             <td>
                                 <div class="player-info">
-                                    <img src="../img/avatar2.png" alt="Avatar 2" class="avatar">
+                                    <img src="../img/avatar20.png" alt="Avatar 2" class="avatar">
                                     <span>Jugador 2</span>
                                 </div>
                             </td>
@@ -111,7 +111,7 @@
                         <tr>
                             <td>
                                 <div class="player-info">
-                                    <img src="../img/avatar3.png" alt="Avatar 3" class="avatar">
+                                    <img src="../img/nose2.png" alt="Avatar 3" class="avatar">
                                     <span>Jugador 3</span>
                                 </div>
                             </td>
@@ -120,7 +120,7 @@
                         <tr>
                             <td>
                                 <div class="player-info">
-                                    <img src="../img/avatar4.png" alt="Avatar 4" class="avatar">
+                                    <img src="../img/nose3.png" alt="Avatar 4" class="avatar">
                                     <span>Jugador 4</span>
                                 </div>
                             </td>
@@ -129,7 +129,7 @@
                         <tr>
                             <td>
                                 <div class="player-info">
-                                    <img src="../img/avatar5.png" alt="Avatar 5" class="avatar">
+                                    <img src="../img/nose4.png" alt="Avatar 5" class="avatar">
                                     <span>Jugador 5</span>
                                 </div>
                             </td>
