--- a/PROYECTO-MJC memoorize/juego3/index.html
+++ b/PROYECTO-MJC memoorize/juego3/index.html
@@ -15,7 +15,7 @@
 
     <div class="game">
         <div class="controls">
-            <button>Iniciar</button>
+            <button class="button">Iniciar</button>
             <div class="stats">
                 <div class="moves">0 movimiento</div>
                 <div class="timer">Tiempo: 0 sec</div>
@@ -27,8 +27,7 @@
         </div>
       
     </div>
-    <button id="siguienteRonda" class="btn btn-success oculto">Siguiente Ronda</button>
-
+    <button id="siguienteRonda" class="oculto">Siguiente Ronda</button>
     
     <script src="js/script_cartas.js"></script>
 </body>
