--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -51,7 +51,7 @@
                         <p>Puntaje</p>
                     </button>
                 </li>
-                <li class="nav-item btn" data-bs-toggle="modal" data-bs-target="#configuracion">
+                <li class="nav-item btn" data-bs-toggle="modal" data-bs-target="#sonido">
                     <button id="soundButton">
                         <img class="imgSonido" src="../img/sonido.png" alt="Icono de sonido">
                         <p>Sonido</p>
@@ -139,7 +139,7 @@
         </div>
     </div>
 </div>
-<div class="modal fade" id="configuracion" tabindex="-1" aria-labelledby="configuracionLabel" aria-hidden="true">
+<div class="modal fade" id="sonido" tabindex="-1" aria-labelledby="configuracionLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -153,7 +153,6 @@
         </div>
     </div>
 </div>
-
 <!-- Modal Estadísticas -->
 <div class="modal fade" id="statisticsModal" tabindex="-1" aria-labelledby="statisticsModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
