--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -19,8 +19,11 @@
     <!-- Navegación principal -->
     <nav class="container-fluid">
         <button id="playButton">
-            <img class="imgSonido" src="../img/icon/noSonido.png" alt="Icono de sonido">
+            <img class="imgSonido" src="../img/musica.png" alt="Icono de sonido">
         </button>
+        <div class="back-button">
+            <a href="../views/principal.html"><img class="back-button-img" src="../img/icon/back.png" alt="Icono de retroceder"></a>
+        </div>
         <audio id="miCancion" src="../audio/no-copyright-music-181373.mp3 "></audio>        
     </nav>
     <!-- Contenido principal -->
