--- a/PROYECTO-MJC memoorize/interfaz/index.html
+++ b/PROYECTO-MJC memoorize/interfaz/index.html
@@ -24,6 +24,6 @@
             <button id="readMore">INICIAR</button>
         </div>
     </div>
-    <script src="bar.js"></script>
+    <script src="redi.js"></script>
 </body>
 </html>
