--- a/PROYECTO-MJC memoorize/multijugador/crearSala/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/crearSala/index.html
@@ -24,9 +24,9 @@
     <h2 class="menu-title">Crea tu sala</h2>
     <div class="container">
         <div class="configuracionSala">
-            <label for="nombreSala">Selecciona el avatar </label>
+            <label for="numeroPersonas">Número de personas</label>
             <div class="codigoSala">
-                <input class="form-control" type="text" id="codigoSala" placeholder="Selecciona tu avatar">
+                <input class="form-control" type="text" id="numeroPersonas" placeholder="Ingresa el número de personas">
             </div>
         </div>
 
