--- a/PROYECTO-MJC memoorize/multijugador/sala/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/sala/index.html
@@ -98,6 +98,7 @@
     <script src="js/sala.js"></script>
     <script src="../unirseSala/js/menu.js"></script>
     <script src="../../bootstrap/js/bootstrap.js"></script>
+    <script src="js/avatar.js"></script>
     <script src="../../bootstrap/js/bootstrap.bundle.js"></script>
 </body>
 </html>
