--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -359,7 +359,7 @@
 </div>
     <!-- Modal para "Cómo conseguir monedas" -->
     <div class="modal fade" id="monedaModal" tabindex="-1" aria-labelledby="monedaModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog  modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="monedaModalLabel">Cómo conseguir monedas</h5>
@@ -379,7 +379,7 @@
             </div>
         </div>
     </div>
-<audio id="backgroundMusic" src="../audio/no-copyright-music-181373.mp3" loop></audio>
+   <audio id="backgroundMusic" src="../audio/no-copyright-music-181373.mp3" loop></audio>
 
     <script src="../services/avatar.js"></script>
     <script src="../services/perfil.js"></script>
