--- a/PROYECTO-MJC memoorize/juegos/rompecabeza/index.html
+++ b/PROYECTO-MJC memoorize/juegos/rompecabeza/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="imagen-superior">
-        <img id="boton-imagen" src="images/image.png" alt="Imagen Submarino">
+        <img id="boton-imagen" src="../../img/icon/back.png" alt="Imagen Submarino">
     </div>
     
     
