--- a/PROYECTO-MJC memoorize/login/resgistrate/index.html
+++ b/PROYECTO-MJC memoorize/login/resgistrate/index.html
@@ -17,7 +17,7 @@
     
     <nav>
         <button id="playButton">
-            <img class="imgSonido" src="../../img/icon/noSonido.png" alt="Sonido desactivado">
+            <img class="imgSonido" src="../../img/musica.png" alt="Sonido desactivado">
         </button>
     </nav>
     
