--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -27,7 +27,7 @@
     <div class="games-container">
         <div class="game-option">
             <img src="../img/2.jpeg" alt="Juego 1" class="game-image">
-            <a href="../juegos/rompecabeza/index.html" class="play-button">Rompecabezas</a>
+            <a href="../juegos/juego rompe/nivel/index.html" class="play-button">Rompecabezas</a>
             <p class="game-description">Arma el enigma.</p>
         </div>
         <div class="game-option2">
