--- a/PROYECTO-MJC memoorize/juegos/juego rompe/rompecabeza 3x3/index.html
+++ b/PROYECTO-MJC memoorize/juegos/juego rompe/rompecabeza 3x3/index.html
@@ -15,10 +15,9 @@
 </head>
 
 <body>
-    <div class="imagen-superior">
-        <img id="boton-imagen" src="images/back.png" alt="Imagen Submarino">
+    <div class="back-button">
+        <a href="../nivel/index.html"><img class="back-button-img" src="../../../img/icon/back.png" alt="Icono de retroceder"></a>
     </div>
-    
     
     <div id="collage">
         <h2>AQUAC-MEMORY ROMPE CABEZA</h2>
