--- a/PROYECTO-MJC memoorize/juegos/juego rompe/rompecabeza 5x5/index.html
+++ b/PROYECTO-MJC memoorize/juegos/juego rompe/rompecabeza 5x5/index.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-    <div class="imagen-superior">
-        <img id="boton-imagen" src="images/back.png" alt="Imagen Submarino">
+    <div class="back-button">
+        <a href="../nivel/index.html"><img class="back-button-img" src="../../../img/icon/back.png" alt="Icono de retroceder"></a>
     </div>
     
     
