--- a/PROYECTO-MJC memoorize/login/resgistrate/index.html
+++ b/PROYECTO-MJC memoorize/login/resgistrate/index.html
@@ -52,8 +52,8 @@
 
                 <div class="col-md-11 inputIcon">
                     <input type="password" class="form-control input" id="contraseñaLogin" placeholder="Contraseña" required>
-                    <span id="togglePassword" style="cursor: pointer;">
-                        <img src="../../img/icon/candado1.png" alt="Icono de contraseña" id="eyeIcon">
+                    <span id="icon"> 
+                        <img src="../img/icon/password.png" alt="Icono de contraseña">
                     </span>
                 </div>
 
@@ -94,11 +94,6 @@
     <audio id="miCancion" src="../../audio/no-copyright-music-181373.mp3" preload="auto" loop></audio>
     <script src="../../services/responseRegistro.js"></script>
     <script src="src/js/sonido.js"></script>
-<<<<<<< HEAD
-   
-=======
-    <script src="src/js/candadore.js"></script>
->>>>>>> 4256f72e766f7249d879250eddccbff65d440012
     <script src="../../bootstrap/js/bootstrap.js"></script>
     <script src="../../bootstrap/js/bootstrap.bundle.js"></script>
     <script src="../../login/resgistrate/js/perfil.js"></script>
