--- a/PROYECTO-MJC memoorize/login/resgistrate/index.html
+++ b/PROYECTO-MJC memoorize/login/resgistrate/index.html
@@ -53,7 +53,7 @@
                 <div class="col-md-11 inputIcon">
                     <input type="password" class="form-control input" id="contraseñaLogin" placeholder="Contraseña" required>
                     <span id="icon"> 
-                        <img src="../img/icon/password.png" alt="Icono de contraseña">
+                        <img src="../../img/icon/password.png" alt="Icono de contraseña">
                     </span>
                 </div>
 
