--- a/PROYECTO-MJC memoorize/login/resgistrate/index.html
+++ b/PROYECTO-MJC memoorize/login/resgistrate/index.html
@@ -51,9 +51,9 @@
                 </div>
 
                 <div class="col-md-11 inputIcon">
-                    <input type="password" class="form-control input" id="contraseñaLogin" placeholder="Contraseña" required>
+                    <input type="password" class="form-control input" id="contraseña" name="contraseña" placeholder="contraseña" required>
                     <span id="icon"> 
-                        <img src="../../img/icon/password.png" alt="Icono de contraseña">
+                        <img src="../../img/icon/password.png" alt="">
                     </span>
                 </div>
 
