nueva forma en cartas

--- a/PROYECTO-MJC memoorize/juego3/index.html
+++ b/PROYECTO-MJC memoorize/juego3/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memoria</title>
+    <title>Aquac-Cartas</title>
     <link rel="stylesheet" href="estilos/estilo_cartas.css">
     <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../img/4.jpeg">
  
 </head>
 <body>
@@ -17,7 +18,7 @@
     
     <div class="menu" onclick="toggleButtons()">
         <img src="../img/icon/wenu-Photoroom.png" alt="Icono del menú" style="width: 40px; height: auto;">
-        <div class="button-container" style="display: none;">
+        <div class="button-container">
             <button id="musicButton">
                 <img class="imgSonido" src="../img/musica.png" alt="Icono de sonido">
             </button>
@@ -36,8 +37,7 @@
             </div>
         </div>
         <div class="board-container">
-            <div class="board" data-dimension="5"></div>
-            <div class="win">Ganaste!</div>
+            <div class="board"></div>
         </div>
       
     </div>
