--- a/PROYECTO-MJC memoorize/juego3/index.html
+++ b/PROYECTO-MJC memoorize/juego3/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aquac-Cartas</title>
+    <title></title>
     <link rel="stylesheet" href="estilos/estilo_cartas.css">
     <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../img/4.jpeg">
  
 </head>
 <body>
@@ -28,14 +27,16 @@
     <div class="score-table oculto"></div>
 
     <div class="game">
-        <div class="controls">
+        
+        <div id="iniciarButton" class="controls">
             <button class="button">Iniciar</button>
-            <button id="siguienteRonda" class="oculto">Siguiente Ronda</button>
+            
             <div class="stats">
                 <div class="moves">0 movimiento</div>
                 <div class="timer">Tiempo: 0 sec</div>
             </div>
         </div>
+        <button id="siguienteRonda" class="oculto">Siguiente Ronda</button>
         <div class="board-container">
             <div class="board"></div>
         </div>
