--- a/PROYECTO-MJC memoorize/pruebachat/index.html
+++ b/PROYECTO-MJC memoorize/pruebachat/index.html
@@ -5,150 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Local</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            height: 100vh;
-            background: #f0f2f5;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        #chat-container {
-            width: 90%;
-            max-width: 600px;
-            height: 80vh;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            display: flex;
-            flex-direction: column;
-        }
-
-        #chat-header {
-            background: #128C7E;
-            color: white;
-            padding: 15px;
-            border-radius: 10px 10px 0 0;
-            text-align: center;
-        }
-
-        #chat-messages {
-            flex: 1;
-            overflow-y: auto;
-            padding: 15px;
-        }
-
-        .mensaje {
-            margin-bottom: 10px;
-            padding: 8px 12px;
-            border-radius: 8px;
-            max-width: 70%;
-            word-wrap: break-word;
-        }
-
-        .enviado {
-            background: #DCF8C6;
-            margin-left: auto;
-        }
-
-        .recibido {
-            background: #E8E8E8;
-        }
-
-        .sistema {
-            text-align: center;
-            color: #666;
-            font-style: italic;
-            margin: 10px 0;
-        }
-
-        #escribiendo {
-            padding: 5px 15px;
-            color: #666;
-            font-style: italic;
-            min-height: 24px;
-        }
-
-        #chat-input {
-            display: flex;
-            padding: 15px;
-            gap: 10px;
-            background: #f5f5f5;
-            border-radius: 0 0 10px 10px;
-        }
-
-        #mensaje {
-            flex: 1;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 20px;
-            outline: none;
-        }
-
-        #enviar {
-            padding: 10px 20px;
-            background: #128C7E;
-            color: white;
-            border: none;
-            border-radius: 20px;
-            cursor: pointer;
-        }
-
-        #enviar:hover {
-            background: #075E54;
-        }
-
-        #login-modal {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0,0,0,0.5);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .modal-content {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-        }
-
-        #nombre-input {
-            margin: 10px 0;
-            padding: 8px;
-            width: 200px;
-        }
-
-        #entrar-btn {
-            padding: 8px 20px;
-            background: #128C7E;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="login-modal">
-        <div class="modal-content">
-            <h2>Ingresa tu nombre</h2>
-            <input type="text" id="nombre-input" placeholder="Tu nombre...">
-            <button id="entrar-btn">Entrar al chat</button>
-        </div>
-    </div>
+  
 
     <div id="chat-container">
         <div id="chat-header">
