--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="moneda" data-bs-toggle="modal" data-bs-target="#monedaModal">
         <img src="../img/icon/moneda.png" alt="moneda" class="moneda-moneda">
-        <span id="moneda-moneda">100</span>
+        <span id="moneda-moneda"></span>
     </div>
     <div class="games-container">
         <div class="game-option">
@@ -197,8 +197,7 @@
             
             <div class="player-details">
                 <h3 id="playerName"></h3>
-                <p>Puntuación Total: <span id="totalScore">1500</span></p>
-                <p id="personalInfoDisplay">Aquí irá la información personal.</p>
+                <p id="personalInfo"></p>
                 <h6>Cambiar Avatar</h6>
                 <div class="avatar-options2" id="piratas">
                     <!-- piratas -->
