--- a/PROYECTO-MJC memoorize/login/recuperar/index.html
+++ b/PROYECTO-MJC memoorize/login/recuperar/index.html
@@ -16,7 +16,7 @@
 	    
     <nav class="container-fluid">
         <button id="playButton">
-            <img class="imgSonido si" src="../../img/icon/noSonido.png" alt="">
+            <img class="imgSonido si" src="../../img/musica.png" alt="">
         </button>
     </nav>
     <main>
