--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -203,6 +203,10 @@
                 <div class="avatar-options2" id="gratis">
 
                 </div>
+                <h6>Avatars comprados</h6>
+                <div class="avatar-options2" id="comprados">
+
+                </div>
         
                 <p>Alienígenas</p>
                 <div class="avatar-options2">
@@ -329,9 +333,9 @@
    <audio id="backgroundMusic" src="../audio/no-copyright-music-181373.mp3" loop></audio>
 
 
-    <script src="../services/avatar.js"></script>
-    <script src="../services/editarAvatar.js"></script>
-    <script src="../services/perfil.js"></script>
+    <script src="../services/avatar/avatar.js"></script>
+    <script src="../services/avatar/avatarComprados.js"></script>
+    <script src="../services/usuario/perfil.js"></script>
     <script src="js/sonido.js"></script>
     <script src="js/icon.js"></script>
     
