--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -86,7 +86,7 @@
         </div>
     </div>
 
-    <script src="../services/login.js"></script>
+    <script src="../services/usuario/login.js"></script>
     <script src="src/js/sonido.js"></script>
     <script src="../bootstrap/js/bootstrap.js"></script>    
     <script src="../bootstrap/js/bootstrap.bundle.js"></script>
