--- a/PROYECTO-MJC memoorize/multijugador/sala/chat/indexchat.html
+++ b/PROYECTO-MJC memoorize/multijugador/sala/chat/indexchat.html
@@ -6,6 +6,7 @@
     <title>Chat Memorize</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
+        /* Estilos básicos del chat */
         * {
             margin: 0;
             padding: 0;
@@ -208,6 +209,17 @@
 
         let timeoutEscribiendo;
 
+        // Función para leer el mensaje en voz alta
+        function leerMensaje(mensaje) {
+            if ('speechSynthesis' in window) {
+                const msg = new SpeechSynthesisUtterance(mensaje);
+                msg.lang = 'es-ES';  // Usar español
+                window.speechSynthesis.speak(msg);
+            } else {
+                console.log('Tu navegador no soporta SpeechSynthesis');
+            }
+        }
+
         function agregarMensaje(mensaje, tipo, nombre = '') {
             const div = document.createElement('div');
             
@@ -277,6 +289,9 @@
         socket.on('chat', (data) => {
             if (data.nombre !== nombreInput.value.trim()) {
                 agregarMensaje(data.mensaje, 'recibido', data.nombre);
+                
+                // Leer el mensaje recibido en voz alta
+                leerMensaje(data.mensaje);
             }
         });
 
