tienda funcional, falta los modales

--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -266,8 +266,13 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
+                <h5>comprar</h5>
                 <div id="tienda" class="row">
                          
+                </div>
+                <h5>adquiridos</h5>
+                <div id="adquiridos" class="row">
+
                 </div>
             </div>
         </div>
