actualizando base de datos

--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -26,17 +26,17 @@
     </div>
     <div class="games-container">
         <div class="game-option">
-            <img src="../img/2.jpeg" alt="Juego 1" class="game-image">
+            <img src="../img/rompecabeza.jpeg" alt="Juego 1" class="game-image">
             <a href="../juegos/juego rompe/nivel/index.html" class="play-button">Rompecabezas</a>
             <p class="game-description">Arma el enigma.</p>
         </div>
         <div class="game-option2">
-            <img src="../img/3.jpeg" alt="Juego 2" class="game-image">
+            <img src="../img/wordle.jpeg" alt="Juego 2" class="game-image">
             <a href="../juegos/quiz/index.html" class="play-button2">Wordle</a>
             <p class="game-description">Encuentra palabras.</p>
         </div>
         <div class="game-option3">
-            <img src="../img/4.jpeg" alt="Multijugador" class="game-image">
+            <img src="../img/multijugador.jpeg" alt="Multijugador" class="game-image">
             <a href="../multijugador/index.html" class="play-button">Multijugador</a>
             <p class="game-description">Salas.</p>
         </div>
