--- a/PROYECTO-MJC memoorize/login/resgistrate/index.html
+++ b/PROYECTO-MJC memoorize/login/resgistrate/index.html
@@ -52,10 +52,11 @@
 
                 <div class="col-md-11 inputIcon">
                     <input type="password" class="form-control input" id="contraseña" name="contraseña" placeholder="contraseña" required>
-                    <span id="icon"> 
+                    <span id="icon" onclick="togglePassword()">
                         <img src="../../img/icon/password.png" alt="">
                     </span>
                 </div>
+                
 
                 <div class="col-12">
                     <center>
