--- a/PROYECTO-MJC memoorize/multijugador/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="logo">
-            <img src="../img/4.jpeg" alt="">
+            <img src="../img/multijugador.jpeg" alt="">
         </div>
         <div class="title-box">
             Crea tu sala o unete a una
