--- a/PROYECTO-MJC memoorize/multijugador/crearSala/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/crearSala/index.html
@@ -26,7 +26,7 @@
         <div class="configuracionSala">
             <label for="numeroPersonas">Número de personas</label>
             <div class="codigoSala">
-                <input class="form-control" type="text" id="numeroPersonas" placeholder="Ingresa el número de personas">
+                <input class="form-control" type="number" id="numeroPersonas" placeholder="Ingresa el número de personas">
             </div>
         </div>
 
